# schendule-pet-shop-sqlmodel

./: .env  README.md  pyproject.toml  schedule-pet-shop.db
app/: database.py  main.py
app/endpoints/: GetPetsByIdClient.py
app/models/: Client.py  Pet.py  Schedule.py  Services.py
app/routes/: ClientRoutes.py  PetRoutes.py  ScheduleRoutes.py  ServicesRoutes.py
