[project]
name = "schendule-pet-shop-sqlmodel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.6",
    "ruff>=0.9.1",
    "sqlmodel>=0.0.22",
    "standard>=1.0.3",
    "uvicorn>=0.34.0",
    "uvloop>=0.21.0",
]
